norm and comments / separate dinner in functions

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,10 +1,10 @@
 CC = gcc
-CFLAGS = -Wall -Wextra #-Werror
+CFLAGS = -Wall -Wextra -Werror
 PTHREAD = -lpthread
 
 NAME = philo
 
-SRCS = src/philo.c src/utils.c src/init.c src/utils2.c
+SRCS = src/philo.c src/args_check.c src/init.c src/getset.c src/sim_utils.c src/time.c
 OBJS = $(SRCS:.c=.o)
 
 all: $(NAME)
